WikimediaUI theme: Fix dark mode contrast for framed active button element
Bug: T367095

--- a/src/themes/wikimediaui/elements.less
+++ b/src/themes/wikimediaui/elements.less
@@ -309,7 +309,7 @@
 			// `.oo-ui-buttonElement-active` is the selected (toggled) one here.
 			&.oo-ui-buttonElement-active > .oo-ui-buttonElement-button {
 				background-color: @background-color-progressive--active;
-				color: @color-inverted;
+				color: @color-inverted-fixed;
 				border-color: @border-color-input-binary--active;
 
 				&:focus {
